--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
-    "react-vis": "^1.11.7"
+    "react-vis": "^1.11.7",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
